# types-lxml

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  cliff.toml  multi-subclass.patch  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: bandit.yml  build_inc.yml  compat.yml  format.yml  inc_tc_basedpyright.yml  inc_tc_mypy.yml  inc_tc_pyrefly.yml  inc_tc_pyright.yml  inc_tc_ty.yml  pr.yml  python-test.yml  release.yml  test.yml  test_inc.yml
lxml-stubs/: ElementInclude.pyi  _types.pyi  builder.pyi  cssselect.pyi  etree.pyi  isoschematron.pyi  objectify.pyi  sax.pyi
lxml-stubs/etree/: __init__.pyi  _classlookup.pyi  _cleanup.pyi  _docloader.pyi  _dtd.pyi  _element.pyi  _factory_func.pyi  _iterparse.pyi  _module_func.pyi  _module_misc.pyi  _nsclasses.pyi  _parser.pyi  _relaxng.pyi  _saxparser.pyi  _serializer.pyi  _xinclude.pyi  _xmlerror.pyi  _xmlid.pyi  _xmlschema.pyi  _xpath.pyi  _xslt.pyi
lxml-stubs/html/: __init__.pyi  _element.pyi  _form.pyi  _funcs.pyi  _parse.pyi  builder.pyi  clean.pyi  diff.pyi  html5parser.pyi  soupparser.pyi
lxml-stubs/objectify/: __init__.pyi  _annotate.pyi  _element.pyi  _factory.pyi  _misc.pyi
src/lxml-stubs/: ElementInclude.pyi  _types.pyi  builder.pyi  cssselect.pyi  isoschematron.pyi  sax.pyi
src/lxml-stubs/etree/: __init__.pyi  _classlookup.pyi  _cleanup.pyi  _docloader.pyi  _dtd.pyi  _element.pyi  _factory_func.pyi  _iterparse.pyi  _module_func.pyi  _module_misc.pyi  _nsclasses.pyi  _parser.pyi  _relaxng.pyi  _saxparser.pyi  _serializer.pyi  _xinclude.pyi  _xmlerror.pyi  _xmlid.pyi  _xmlschema.pyi  _xpath.pyi  _xslt.pyi
src/lxml-stubs/html/: __init__.pyi  _element.pyi  _form.pyi  _funcs.pyi  _parse.pyi  builder.pyi  clean.pyi  diff.pyi  html5parser.pyi  soupparser.pyi
src/lxml-stubs/objectify/: __init__.pyi  _annotate.pyi  _element.pyi  _factory.pyi  _misc.pyi
src/mypy_plugin_lxml/: main.py
test-data/: no-test-custom-target.yml  test-attrib.yml  test-builder.yml  test-cssselect.yml  test-custom-target.yml  test-dtd.yml  test-etree-element.yml  test-etree-et.yml  test-etree.yml  test-html-clean.yml  test-html-element.yml  test-html5lib.yml  test-objectify.yml  test-oe-element.yml  test-sax.yml  test-serializer.yml  test-soupparser.yml  test-validator.yml  test-xpath.yml  test-xslt.yml  test_objectify.yml
test-rt/: conftest.py  rttest-mypy.ini  test_attrib.py  test_beautifulsoup.py  test_constants.py  test_elem_class_lookup.py  test_errorlog.py  test_etree_element.py  test_html5lib.py  test_html_link_funcs.py  test_iterparse.py  test_xinclude.py
test-rt/_testutils/: __init__.py  common.py  decorator.py  mypy_adapter.py  pyright_adapter.py  rt_wrapper.py
test-rt/data/: mdn-sample.html  sample.html  sample.html.xz
test-stub/: mypy-py38.ini  mypy-pytest.ini  test-annotations.yml  test-attrib.yml  test-builder.yml  test-classlookup.yml  test-cssselect.yml  test-dtd.yml  test-errorlog.yml  test-etree-element.yml  test-etree-et.yml  test-etree.yml  test-html-clean.yml  test-html-element.yml  test-html5lib.yml  test-mypy-bug.yml  test-nsclasses.yml  test-oe-element.yml  test-oe.yml  test-resolver.yml  test-sax.yml  test-soupparser.yml  test-validator.yml  test-xinclude.yml  test-xmlid.yml
tests/: stubtest_allowlist.txt
tests/runtime/: allowlist.txt  conftest.py  mypy.ini  pyrefly.toml  register_strategy.py  reveal_type_inject.py  rttest-mypy.ini  test_annotation.py  test_attrib.py  test_beautifulsoup.py  test_constants.py  test_cssselect.py  test_dtd.py  test_elem_class_lookup.py  test_errorlog.py  test_etree_element.py  test_helper.py  test_html5lib.py  test_html_link_funcs.py  test_iterparse.py  test_relaxng.py  test_resolvers.py  test_schematron.py  test_xinclude.py  test_xmlid.py  test_xmlschema.py  test_xpath.py
tests/runtime/_data/: shiporder.dtd  shiporder.rnc  shiporder.rng  shiporder.sch  shiporder.xml  shiporder.xsd
tests/runtime/_testutils/: __init__.py  common.py  decorator.py  errors.py  marker.py  mypy_adapter.py  rt_wrapper.py  strategy.py
tests/runtime/elem/: test_attrib.py  test_basic.py  test_class_lookup.py  test_content_only_elem.py  test_docinfo.py  test_elem_accessor.py  test_find_methods.py  test_iter_methods.py  test_misc_methods.py
tests/runtime/html/: conftest.py  test_beautifulsoup.py  test_html5lib.py  test_link_funcs.py
tests/runtime/html_/: conftest.py  test_beautifulsoup.py  test_element.py  test_html5lib.py  test_link_funcs.py
tests/static/: conftest.py  mypy-pytest.ini  test-annotations.yml  test-builder.yml  test-classlookup.yml  test-cssselect.yml  test-dtd.yml  test-etree-et.yml  test-etree.yml  test-html-element.yml  test-nsclasses.yml  test-oe-element.yml  test-resolver.yml  test-serializer.yml  test-validator.yml  test-xmlid.yml
